<resources>
    <string name="app_name">Clinical Appointments</string>
    <string name="user_email">E-mail</string>
    <string name="user_password">Password</string>
    <string name="login">Login</string>
    <string name="redirect_to_register">Don\'t have an account yet?  Sign Up</string>
    <string name="remember">Remember me</string>
    <string name="email_required_error">Please fill in your e-mail address</string>
    <string name="email_format_error">Invalid email address</string>
    <string name="password_required_error">Please fill in your password</string>
    <string name="email_unavailable_error">Email address does not exist</string>
    <string name="wrong_password_error">Wrong password</string>
    <string name="authentication_failure">Login failed</string>
    <string name="account_not_enabled">Your account is not active</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="first_name_required_error">Please fill in your first name</string>
    <string name="last_name_required_error">Please fill in your last name</string>
    <string name="phone_required_error">Please fill in your phone number</string>
    <string name="password_confirmation_error">Please confirm your password</string>
    <string name="passwords_do_not_match_error">Passwords do not match</string>
    <string name="user_first_name">First name</string>
    <string name="user_last_name">Last name</string>
    <string name="user_phone">Phone</string>
    <string name="register">Sign Up</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="redirect_to_login">Already have an account? Sign in here</string>
    <string name="specialization">Specialization</string>
    <string name="specialization_required_error">Please fill in your specialization</string>
    <string name="password_not_strong_enough_error">Password must be at least 6 characters long</string>
    <string name="email_already_in_use_error">Email address is already in use</string>
    <string name="failed_registration">Failed registration</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_account_message_title">Are you sure you want to delete your account?</string>
    <string name="delete_message">The action cannot be cancelled</string>
    <string name="update_failed">Update failed</string>
    <string name="account_settings">Your Account</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="main">Go to main</string>
    <string name="appointments">Appointments</string>
    <string name="surgery">General surgery</string>
    <string name="cardiology">Cardiology</string>
    <string name="available_doctors">Available Doctors</string>
    <string name="makeAppointment">Make an appointment</string>
    <string name="specializations">Specializations</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="appointment_edited">Appointment edited successfully</string>
    <string name="cancel_appointment_message_title">Are you sure you want to cancel this appointment?</string>
    <string name="uploadPDF">Upload results</string>
    <string name="downloadPDF">Download results</string>
    <string name="results_not_ready">Results not ready. Try again later.</string>
    <string name="visually_impaired">Visually Impaired</string>
    <string name="users">Users</string>
    <string name="reports">Reports</string>
    <string name="visually_impaired_ophthalmology_message">When registering in the application you selected that you are visually impaired. In this case, we recommend a consultation with one of our specialist eye doctors.</string>
    <string name="visually_impaired_magnifier_message">To make it easier for you to use the app, just hold down on the texts you want to enlarge.</string>
    <string name="disable_magnifier_message">If you want to disable this setting, you can always do so from your preferences.</string>
    <string name="ophthalmology">Ophthalmology</string>
    <string name="redirect_to_main">Skip and go to main</string>
    <string name="no_of_appointments">No. of appointments</string>
    <string name="no_of_users">No. of users</string>
    <string name="no_of_doctors">No. of doctors</string>
    <string name="no_of_patients">No of. patients</string>
    <string name="most_used_specialization">Most frequent</string>
    <string name="dermatology">Dermatology</string>
    <string name="neurology">Neurology</string>
    <string name="pediatrics">Pediatrics</string>
    <string name="plastic_surgery">Plastic Surgery</string>
    <string name="psychiatry">Psychiatry</string>
    <string name="appointment_modification_denied">You cannot change your appointment 24 hours in advance</string>
</resources>